hphp/hack/test/typecheck/new_inference/nothing/subtype.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test(int $x): nothing {
  return $x;
}
